# com4521-Labs

./: .gitignore  CMakeLists.txt
com4521-Lab04_src/: exercise01.cu  exercise02.cu
com4521-Lab05_src/: exercise01.cu  exercise02.cu  exercise03.cu  header.cuh
com4521-Lab06_src/: benchmark.cu  dispatcher.cuh  exercise01.cu  layouts.cuh  mm_2025.cu  mm_cuda_core.cuh  mm_tensor_core.cuh
com4521-Lab07_src/: exercise01.cu  kernels.cuh
com4521-Lab08_src/: exercise01.cu  exercise02.cu  readme.md
include/: common.cuh
